# synton-db

./: .dockerignore  .env.example  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  README.zh-CN.md  config.toml  docker-compose.yml  synton-ops.sh
.github/workflows/: ci.yml
crates/api/: Cargo.toml  build.rs
crates/api/src/: error.rs  grpc.rs  instrument.rs  lib.rs  models.rs  openapi.rs  rest.rs  service.rs
crates/api/src/proto/: service.proto
crates/api/tests/: persistence_test.rs  service_test.rs  workflow_test.rs
crates/chunking/: Cargo.toml
crates/chunking/src/: chunk.rs  error.rs  fixed.rs  hierarchical.rs  lib.rs  semantic.rs  strategy.rs
crates/cli/: Cargo.toml
crates/cli/src/: client.rs  commands.rs  lib.rs  main.rs  output.rs
crates/collector/: Cargo.toml
crates/collector/src/: error.rs  lib.rs  persistence.rs  query.rs
crates/core/: Cargo.toml
crates/core/src/: edge.rs  error.rs  filter.rs  lib.rs  node.rs  node_type.rs  path.rs  relation.rs  source.rs
crates/graph/: Cargo.toml
crates/graph/src/: error.rs  graph.rs  lib.rs  path.rs  traversal.rs
crates/graph/tests/: graph_test.rs
crates/graphrag/: Cargo.toml
crates/graphrag/src/: error.rs  expansion.rs  formatter.rs  lib.rs  rag.rs  retrieval.rs  scorer.rs  summary.rs
crates/instrument/: Cargo.toml
crates/instrument-macros/: Cargo.toml
crates/instrument-macros/src/: lib.rs
crates/instrument/src/: collector.rs  lib.rs  span.rs  statistics.rs  views.rs
crates/mcp-server/: Cargo.toml  README.md
crates/mcp-server/src/: client.rs  lib.rs  main.rs  protocol.rs  server.rs  tools.rs
crates/memory/: Cargo.toml
crates/memory/src/: config.rs  decay.rs  error.rs  lib.rs  manager.rs
crates/ml/: Cargo.toml
crates/ml/src/: backend.rs  config.rs  error.rs  lib.rs  loader.rs  local.rs  ollama.rs  openai.rs  service.rs
crates/ml/tests/: integration_test.rs  local_test.rs
crates/paql/: Cargo.toml
crates/paql/src/: ast.rs  error.rs  lib.rs  parser.rs
crates/query/: Cargo.toml
crates/query/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: error.rs  lib.rs  rocksdb.rs  store.rs
crates/storage/tests/: rocksdb_test.rs
crates/vector/: Cargo.toml
crates/vector/src/: error.rs  index.rs  lance.rs  lib.rs
crates/vector/tests/: index_test.rs
docs/: CONTRIB.md  PROJECT_STATUS.md  README.md  RUNBOOK.md
docs/architecture/: api-design.md  data-model.md  module-design.md
docs/archive/2025/: 2025-02-05-cli-implementation.md  2025-02-05-e2e-test-final.md  2025-02-05-mvp-completed.md  2025-02-05-project-init-completed.md  2025-02-05-tech-selection-completed.md  2025-02-09-web-ui-implementation.md
docs/progress/: 2025-02-05-bin-server-docker.md  2025-02-05-e2e-testing.md  2025-02-05-integration-phase.md  2026-02-05-ml-integration.md  instrumentation-system.md  phase1-unit-tests-2026-02-06.md  phase3-api-docs-2026-02-06.md
docs/progress/completed/: instrumentation-system.md
docs/reports/: implementation-status.md
docs/reports/completed/: 2025-02-05-e2e-test-results.md  api-document-ingestion-2026-02-10.md  kv-storage-selection.md  mcp-integration.md  ml-framework-selection.md  phase0-candle-upgrade-2026-02-10.md  phase1-chunking-2026-02-10.md  phase2-candle-ml-2026-02-06.md  phase2-lance-index-2026-02-10.md  phase3-context-synthesis-2026-02-10.md  phase4-candle-ml-2026-02-11.md  phase4-integration-tests-2026-02-06.md  phases-0-3-summary-2026-02-10.md  tech-stack-final.md  vector-index-selection.md
docs/standards/: documentation-conventions.md
docs/templates/: acceptance-report.md  completion-report.md  progress-report.md
e2e/: .gitignore  README.md  package-lock.json  package.json  playwright.config.ts  test-config.toml  tsconfig.json
e2e/html-report/: index.html
e2e/tests/: api-response-format.spec.ts  concurrency-and-edge-cases.spec.ts  edge-operations.spec.ts  fixtures.ts  global-setup.ts  global-teardown.ts  helpers.ts  node-operations.spec.ts  query-operations.spec.ts  stats.spec.ts
memory/: MEMORY.md
memory/daily/: 2025-02-05.md  2026-02-06.md  2026-02-11.md  2026-02-13.md
release/docker/: config.toml  entrypoint.sh  grafana-dashboards.yml  grafana-datasources.yml  prometheus.yml
release/mcp-server/: Dockerfile  config.json  docker-compose.yml
scripts/: backup.sh  restore.sh
web/: .dockerignore  Dockerfile  components.json  index.html  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
web/src/: App.css  App.tsx  cytoscape.d.ts  index.css  main.tsx
web/src/components/graph/: GraphViewer.tsx  NodeInspector.tsx  index.ts
web/src/components/layout/: Header.tsx  Layout.tsx  Sidebar.tsx  index.ts
web/src/components/shadcn/ui/: popover.tsx  progress.tsx  tabs.tsx  toast.tsx  toaster.tsx  tooltip.tsx
web/src/components/ui/: Button.tsx  Input.tsx  Modal.tsx  Select.tsx  StatCard.tsx  index.ts
web/src/pages/: Dashboard.tsx  Edges.tsx  Graph.tsx  NodeDetail.tsx  Nodes.tsx  Query.tsx  Traverse.tsx
web/src/services/: api.ts
web/src/types/: api.ts
