[workspace]
members = ["crates/*"]
exclude = ["crates/query"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["SYNTON-DB Team"]
license = "Apache-2.0"
repository = "https://github.com/synton-db/synton-db"
homepage = "https://github.com/synton-db/synton-db"
readme = "README.md"
keywords = ["database", "cognitive", "vector", "graph", "llm"]
categories = ["database", "database-implementations"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1.81"

# Error handling
anyhow = "1.0.87"
thiserror = "2.0.0"

# Logging
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# Serialization
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"

# UUID
uuid = { version = "1.10.0", features = ["v4", "serde"] }

# Time
chrono = { version = "=0.4.37", features = ["serde"] }

# Storage
rocksdb = "0.22.0"
lance = { version = "0.12.0", default-features = false }

# ML / Embeddings
candle = { version = "0.9.2", package = "candle-core" }
candle-nn = { version = "0.9.2" }
candle-transformers = { version = "0.9.2" }
safetensors = "0.7.0"
tokenizers = "0.20.0"
hf-hub = { version = "0.3.2", features = ["tokio"] }

# Networking
tonic = { version = "0.12.1", features = ["gzip"] }
prost = "0.13.2"
axum = { version = "0.7.5", features = ["multipart"] }
tower = "0.5.1"
hyper = "1.4.0"
http = "1.1.0"

# Parsing
nom = "7.1.3"

# Utils
bytes = "1.7.2"
futures = "0.3.30"
tokio-stream = "0.1.16"

# Testing
proptest = "1.5.0"
criterion = { version = "0.5.1", features = ["html_reports"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0

[profile.bench]
inherits = "release"
