[package]
name = "synton-chunking"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
synton-core = { path = "../core" }
synton-ml = { path = "../ml" }

tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true }
unicode-segmentation = "0.1"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }

[features]
default = []
local = ["synton-ml/candle"]
