[package]
name = "synton-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for SYNTON-DB cognitive database"

[[bin]]
name = "synton-cli"
path = "src/main.rs"

[dependencies]
synton-core = { path = "../core" }
synton-api = { path = "../api" }

# Async runtime
tokio = { workspace = true, features = ["rt-multi-thread", "net", "macros", "io-util"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
