[package]
name = "synton-instrument"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Instrumentation and tracing system for SYNTON-DB"

[lib]
name = "synton_instrument"
path = "src/lib.rs"

[dependencies]
# Workspace dependencies
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# Local dependencies
synton-instrument-macros = { path = "../instrument-macros" }

# Async
tokio = { workspace = true }

# Additional dependencies for instrumentation
parking_lot = "0.12"
once_cell = "1.19"
dashmap = "6.0"

# Storage
rocksdb = { workspace = true }
thread_local = "1.1"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
criterion = { workspace = true }
