[package]
name = "synton-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
synton-core = { path = "../core" }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
futures = "0.3"
chrono = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Storage backends (feature-gated)
rocksdb = { workspace = true, optional = true }
lance = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3.13"

[features]
default = ["rocksdb"]
rocksdb = ["dep:rocksdb"]
lance = ["dep:lance"]
